--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -12,6 +12,7 @@
     
     {% block content %}
     {% endblock %}
+    <script src="{% static 'js/notification.js' %}"></script>
     <script src="{% static 'js/cart.js' %}"></script>
     <script src="{% static 'js/nav.js' %}"></script>
     <script src="{% static 'js/items.js' %}"></script>
