--- a/src/templates/foods/items.html
+++ b/src/templates/foods/items.html
@@ -7,88 +7,7 @@
 
     <div class="bg-black opacity-50 z-20 top-0 bottom-0 left-0 right-0 fixed hidden" id="overlay">
     </div>
-    <!-- nav start -->
-    <div class="lg:col-span-1">
-      <nav>
-        <div class="flex justify-between mb-6 px-2 md:mb-16">
-          <h1 class="font-bold uppercase">
-            <a href="/" class="text-xl"><i class="fas fa-user-ninja mr-2"></i>Rest <span
-                class="text-red-700">Foods</span></a>
-          </h1>
-          <div class="px-4 cursor-pointer lg:hidden" id="open-menu">
-            <i class="fas fa-bars"></i>
-          </div>
-        </div>
-        <ul class="hidden lg:block mr-10 mb-10" id="menu">
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold bg-custom-yellow block" href="items-1.html">
-              <i class="fas fa-hamburger mr-2"></i>
-              <span>Burgers</span>
-            </a>
-          </li>
-          <li class="my-3">
-            <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="items-3.html">
-              <i class="fas fa-pizza-slice mr-2"></i>
-              <span>Pizza</span>
-            </a>
-          </li>
-          <div class="mt-16">
-            <span class="px-3 text-gray-500">Other</span>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="/orders/">
-                <i class="fas fa-redo-alt mr-2"></i>
-                <span>My Orders</span>
-              </a>
-            </li>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider {% if '/accounts/profile/' in request.path %}font-bold bg-custom-yellow block {% endif %}" href="/accounts/profile/">
-                <i class="fas fa-user-alt mr-2"></i>
-                <span>Profile</span>
-              </a>
-            </li>
-          </div>
-        </ul>
-      </nav>
-    </div>
-    <!--nav end-->
-    <main class="lg:col-span-4">
-      <div class="flex justify-center md:justify-end">
-        <a href="index.html" class="rounded-full bg-gray-200 py-2 px-6 mr-auto"><i
-            class="fas fa-long-arrow-alt-left"></i></a>
-        <button class="font-bold rounded-full bg-white mr-2 py-2 px-3 shadow sm:block hidden cart"><i
-            class="fas fa-shopping-basket"></i> 8
-          items - $17.50</button>
-        {% if not request.user.is_authenticated %}
-        <a href="/accounts/login/" class="font-bold rounded-full bg-yellow-400 ml-2 py-2 px-3">login</a>
-        <a href="#" class="font-bold rounded-full bg-gray-300 py-2 px-3 ml-2">signup</a>
-        {% endif %}
-      </div>
-      <button class="font-bold rounded-full bg-white mr-2 py-2 px-3 shadow block sm:hidden mt-5 w-full cart"><i
-          class="fas fa-shopping-basket mr-3"></i> 8
-        items - $17.50</button>
-      <div class="mt-16">
-        <div><span class="font-bold text-2xl md:text-4xl">Ninja Burgers</span><img src="images/hamburger.svg"
-            class="h-6 w-6 md:h-8 md:w-8 mb-3 ml-2 md:ml-5 inline-flex"></div>
-
-        <div class="mt-5 grid lg:grid-cols-3 sm:grid-cols-2 gap-16">
-
-          <!--card-->
-          <div class="bg-white rounded-lg shadow-md p-3 hover:shadow-lg item">
-            <img src="images/burger.png" alt="burger" class="w-full transform hover:scale-90 transition duration-300">
-            <div class="m-3 text-center">
-              <span class="font-bold text-xl">Bacon jammer</span>
-              <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
-              <span class="block text-custom-yellow mt-10 font-bold text-3xl">$ 3.50</span>
-            </div>
-          </div>
-          <!--card end-->
-
-        </div>
-
-      </div>
-
-
-    </main>
+    {% include "foods/partial/narbar.html" %}
     {% include "foods/partial/aside.html" %}
     {% include "foods/partial/order-sider.html" %}
   </div>
