13 Impoving on the template

--- a/src/templates/foods/items.html
+++ b/src/templates/foods/items.html
@@ -7,7 +7,7 @@
 
     <div class="bg-black opacity-50 z-20 top-0 bottom-0 left-0 right-0 fixed hidden" id="overlay">
     </div>
-    {% include "foods/partial/narbar.html" %}
+    {% include "foods/partial/component.html" %}
     {% include "foods/partial/aside.html" %}
     {% include "foods/partial/order-sider.html" %}
   </div>
