--- a/src/templates/foods/partial/component.html
+++ b/src/templates/foods/partial/component.html
@@ -12,18 +12,13 @@
             </div>
           </div>
           <ul class="hidden lg:block mr-10 mb-10" id="menu">
+            {% for obj in object_list %}
             <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold bg-custom-yellow block" href="items-1.html">
-                <i class="fas fa-hamburger mr-2"></i>
-                <span>Burgers</span>
+              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold bg-custom-yellow block" href="{% url 'foods:detail-page' obj.name %}">
+                <span>{{ obj.name }}</span>
               </a>
             </li>
-            <li class="my-3">
-              <a class="rounded-lg py-2 px-3 text-md tracking-wider font-bold" href="items-3.html">
-                <i class="fas fa-pizza-slice mr-2"></i>
-                <span>Pizza</span>
-              </a>
-            </li>
+            {% endfor %}
             <div class="mt-16">
               <span class="px-3 text-gray-500">Other</span>
               <li class="my-3">
@@ -67,26 +62,14 @@
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
                     </svg>
                 </div>
-                <input type="search" id="default-search" class="block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Search .."/>
+                <input type="search" id="default-search" class="md:mt-10 block w-full p-4 ps-10 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 md:mt-12" placeholder="Search .."/>
                 <button type="submit" class="text-white absolute end-2.5 bottom-2.5 bg-black focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Search</button>
             </div>
           </form>
-
+          {# Message #}
           <div id="message" class=" mt-12 p-4 text-sm text-gray-800 rounded-lg bg-gray-50 dark:bg-gray-800 font-medium dark:text-gray-300 hidden" role="alert"></div>
-        <div class="mt-16">
-          <div><span class="font-bold text-2xl md:text-4xl">Ninja Burgers</span><img src="images/hamburger.svg"
-              class="h-6 w-6 md:h-8 md:w-8 mb-3 ml-2 md:ml-5 inline-flex"></div>
-          
-          <div class="mt-5 grid lg:grid-cols-3 sm:grid-cols-2 gap-16">
-  
-            <!--card-->
-            
-            {% include "foods/partial/card.html" %}
-            <!--card end-->
-            
-          </div>
-  
-        </div>
+
+          {% include "foods/partial/card.html" with queryset=object obj=object %}
   
   
       </main>
