13 Impoving the template

--- a/src/templates/foods/partial/aside.html
+++ b/src/templates/foods/partial/aside.html
@@ -4,8 +4,8 @@
       <div class="p-8">
         <button class="bg-gray-200 py-2 px-6 rounded-full" id="close-side-panel"><i class="fas fa-times"></i></button>
         <main class="text-center">
-          <img src="images/burger.png" alt="burger" class="w-56 mx-auto mt-16 mb-8">
-          <span class="font-bold text-3xl">Bacon jammer</span>
+          <img src="{{ object.image.url }}" alt="image" class="w-56 mx-auto mt-16 mb-8">
+          <span class="font-bold text-3xl"></span>
           <span class="block text-gray-600 text-sm">bacon, iceberg, mayo</span>
           <span class="block text-custom-yellow mt-6 font-bold text-3xl">$ 3.50</span>
           <span class="block mt-8">
