--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -92,7 +92,7 @@
                         <li><a {% if not login in request.path %} class="inline-block no-underline hover:text-black hover:underline py-2 px-4" {% else %} class="text-red-500 font-bold hover:text-red-800" {% endif %} href="{{ login }}">Login</a></li>
                         <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="">Sign Up</a></li>
                       {% else %}
-                      <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="">Log Out</a></li>
+                      <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="{% url 'logout' %}">Log Out</a></li>
                       {% endif %}
                     </ul>
                 </nav>
