added signup view

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -90,7 +90,7 @@
                       {% if request.user.is_anonymous %}
                       {% url 'login' as login %}
                         <li><a {% if not login in request.path %} class="inline-block no-underline hover:text-black hover:underline py-2 px-4" {% else %} class="text-red-500 font-bold hover:text-red-800" {% endif %} href="{{ login }}">Login</a></li>
-                        <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="">Sign Up</a></li>
+                        <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="{% url 'signup' %}">Sign Up</a></li>
                       {% else %}
                       <li><a class="inline-block no-underline hover:text-black hover:underline py-2 px-4" href="{% url 'logout' %}">Log Out</a></li>
                       {% endif %}
@@ -122,7 +122,13 @@
             </div>
         </div>
     </nav>
-
+    {% for message in messages %}
+    {% if message.tags == 'error' %}
+    <div class="bg-red-500 mb-4 text-sm rounded-lg p-2 shadow-xl hover:bg-red-700"><h1 class="font-bold text-white text-center">{{ message }}</h1></div>
+    {% else %}
+    <div class="mb-4 text-white bg-green-500 border border-green-900 font-bold text-sm text-center p-2 w-full rounded-sm"><span>{{ message }}</span></div>
+    {% endif %}
+    {% endfor %}
       {% block content %}
       {% endblock %}
     <footer class="container mx-auto bg-white py-8 border-t border-gray-400">
