--- a/src/templates/accounts/login.html
+++ b/src/templates/accounts/login.html
@@ -2,10 +2,13 @@
 
 {% block content %}
   <form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post">
+    <h1 class="text-center text-2xl text-bold">Log In</h1>
     {% csrf_token %}
       <div class="mb-5 pt-5">
         {{ form.as_div }}
       </div>
-      <button type="submit" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">Submit</button>
+      <button type="submit" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">Login</button>
+
+      <div class="mt-6 px-2 text-center font-bold"><small>Don't have an account yet? <a class="text-red-600 hover:text-red-800 font-thin" href="{% url 'signup' %}">Sign up</a></small></div>
   </form>
 {% endblock %}
