--- a/src/templates/accounts/signup.html
+++ b/src/templates/accounts/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post">
-    <h1 class="text-xl font-bold text-center">Sign Up</h1>
+    <h1 class="text-2xl p-6 font-bold text-center">Sign Up</h1>
     {% csrf_token %}
       <div class="mb-5 pt-5">
         {{ form.as_div }}
