--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -129,6 +129,7 @@
     <div class="mb-4 text-white bg-green-500 border border-green-900 font-bold text-sm text-center p-2 w-full rounded-sm"><span>{{ message }}</span></div>
     {% endif %}
     {% endfor %}
+    <div id="message" class="hidden mb-4 text-white bg-green-500 border border-green-900 font-bold text-sm text-center p-2 w-full rounded-sm"></div>
       {% block content %}
       {% endblock %}
     <footer class="container mx-auto bg-white py-8 border-t border-gray-400">
@@ -173,7 +174,6 @@
         </div>
       </div>
     </footer>
-    
   </body>
     
 </html>
