--- a/src/templates/foods/food_list.html
+++ b/src/templates/foods/food_list.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% load static %}
+
 {% block content %}
     <div class="carousel relative container mx-auto" style="max-width:1600px;">
         <div class="carousel-inner relative overflow-hidden w-full">
@@ -115,6 +117,6 @@
             </div>
             {% endfor %}
             </div>
-
+    <script src="{% static 'js/notification.js' %}"></script>
     </section>
 {% endblock %}
