--- a/src/templates/accounts/verify-email.html
+++ b/src/templates/accounts/verify-email.html
@@ -3,7 +3,7 @@
 {% block content %}
 <form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post">
     {% csrf_token %}
-    <h1 class="mb-4 mt-2 p-2">An email as been sent to you to comfrim your account. <span class="text-gray-700 font-bold">{{ request.user.email }}</span></h1>
+    <h1 class="mb-4 mt-2 p-2">An email as been sent to you to comfrim your account. <span class="text-gray-700 font-bold">{{ request.session.email }}</span></h1>
     {{ form }}
     <button id="submit-btn" type="submit" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">continue</button>
   </form>
