--- a/src/templates/foods/restaurant-form.html
+++ b/src/templates/foods/restaurant-form.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 
 {% block content %}
-<form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post">
+<form class="max-w-sm mx-auto mt-12 mb-12 bg-white p-12 rounded-xl shadow-xl font-mono" method="post" {% if form.is_multipart %} enctype="multipart/form-data" {% endif %}>
+    <h1 class="text-center font-bold text-xl mb-4 p-2">Create a Restaurant</h1>
     {% csrf_token %}
-    <button type="submit" class="text-white bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">Logout</button>
+    {{ form }}
+    <button type="submit" class="text-white mt-4 bg-red-500 hover:bg-red-600 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 text-center dark:bg-red-500 mb-12 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl">Create</button>
+    <a href="/" class="text-black mt-12 focus:ring-4 focus:outline-none focus:ring-red-800 font-medium rounded-lg text-sm sm:w-full sm:justify-end w-auto px-5 py-2.5 dark:bg-red-500 dark:hover:bg-red-600 dark:focus:ring-red-800 hover:shadow-2xl border border-black">Cancel</a>
   </form>
 {% endblock %}
